<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Quick Math Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="description">Quick Maths</string>
    <string name="intro"><u>The master material of mathematic</u>\n Let\'s Quick Math!</string>
    
    <string name="start">Start</string>
    <string name="standard">Standard Mode</string>
    <string name="training">Training mode</string>
    <string name="start_game">Start Game</string>
    <string name="version">version: v0.0.1</string>
    <string name="exit">Exit</string>

    <string name="exit_dialog_header">Exit</string>
    <string name="exit_dialog_text">Are you sure you want to exit?</string>
    <string name="menu_dialog_text">Back to menu page?</string>
    <string name="score_dialog_text">Browse the score report?</string>
    <string name="record_dialog_text">Browse the timing record?</string>
    <string name="positive_ans">Yes</string>
    <string name="negative_ans">No</string>
    
    <string name="correct">The number of correct :</string>
    <string name="wrong">The number of wrong :</string>
    <string name="time">The time of using :</string>
    <string name="question">Question :</string>
    <string name="hint">Enter the answer of question ...</string>
    <string name="begin">Begin The Match</string>
    <string name="next_question">Next Question</string>
    <string name="finish">Finish</string>
    
    <string name="mission"><u>Mission Completed</u></string>
    <string name="timer">Complete game in :</string>
    <string name="score_report">Score Report</string>
    <string name="timing_record">Timing Record</string>
    <string name="menu">Back To Menu</string>
    
    <string name="record"><u>Time Process</u></string>
    <string name="score"><u>Score Board</u></string>
    <string name="gameNo">Game Number :</string>
    <string name="date">Completed Date :</string>
    <string name="note">P.S. Completion Time / Correct Amount - <u>X Axis</u></string>
    <string name="back">Back To Previous page</string>
    
</resources>