<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description"
        android:minHeight="150dp"
        android:src="@drawable/banner" />
    
    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/ivBanner"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/intro" />

    <Button
		android:id="@+id/btnStandard"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvIntro"
		android:layout_marginTop="@dimen/button_margin"
		android:background="@drawable/button_main"
		android:layout_gravity="center"
		android:text="@string/standard" />
    
    <Button
		android:id="@+id/btnTraining"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/btnStandard"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_gravity="center"
		android:background="@drawable/button_main"
		android:text="@string/training" />
    
    <Button
		android:id="@+id/btnRecord"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/btnTraining"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_gravity="center"
		android:background="@drawable/button_main"
		android:text="@string/timing_record" />
    
    <Button
		android:id="@+id/btnExit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/btnRecord"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_gravity="center"
		android:background="@drawable/button_main"
		android:text="@string/exit" />

</RelativeLayout>