<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <TextView
        android:id="@+id/tvCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="@string/mission"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
	    android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCompleted"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/timer" />
    
    <TextView
	    android:id="@+id/tvCountTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTimer"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="00:00:00" />
    
    <TextView
	    android:id="@+id/tvCorrect"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignBaseline="@+id/tvShowCorrect"
	    android:layout_below="@+id/tvCountTime"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:text="@string/correct" />

	<TextView
	    android:id="@+id/tvShowCorrect"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/tvCountTime"
	    android:layout_toRightOf="@+id/tvCorrect"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:textColor="#43C222"
	    android:gravity="center"
	    android:text="0" />
    
	<TextView
	    android:id="@+id/tvWrong"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignBaseline="@+id/tvShowWrong"
	    android:layout_below="@+id/tvCorrect"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:text="@string/wrong" />
	
	<TextView
	    android:id="@+id/tvShowWrong"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_toRightOf="@+id/tvCorrect"
	    android:layout_below="@+id/tvShowCorrect"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:textColor="#C22243"
	    android:gravity="center"
	    android:text="0" />
	
    <Button
		android:id="@+id/btnScore"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btnRecord"
		android:background="@drawable/button_main"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_margin="5dp"
		android:text="@string/score_report" />
    
    <Button
		android:id="@+id/btnRecord"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btnMenu"
		android:background="@drawable/button_main"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_margin="5dp"
		android:text="@string/timing_record" />
    
    <Button
		android:id="@+id/btnMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btnExit"
		android:background="@drawable/button_main"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_margin="5dp"
		android:text="@string/menu" />
    
    <Button
		android:id="@+id/btnExit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@drawable/button_main"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_margin="5dp"
		android:text="@string/exit" />

</RelativeLayout>