<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/index"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/ivSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description"
        android:src="@drawable/on" />
    
    <TextView 
        android:id="@+id/tvSpace"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true" />
    
    <Button
		android:id="@+id/btnStartGame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/button_main"
		android:layout_marginTop="@dimen/button_margin"
		android:layout_margin="20sp"
		android:layout_below="@+id/tvSpace"
		android:text="@string/start_game" />
    
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/version"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>
